# Karabo-Pipeline

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  pyproject.toml
.devcontainer/: .pre-commit-config.yaml  Dockerfile  devcontainer.json
karabo/simulation/: sky_model.py
karabo/simulation/signal/: base_segmentation.py  base_signal.py  eor_profile.py  galactic_foreground.py  helpers.py  plotting.py  seg_u_net_segmentation.py  segmentation.ipynb  segmentation.py  signal_21_cm.py  simulation.ipynb  simulation.py  superimpose.py  superpixel_segmentation.py  synchroton_signal.py  typing.py
karabo/test/signal/: test_superimpose.py
karabo/util/: plotting_util.py
