[tool.poetry]
name = "karabo-pipeline"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "karabo"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.22"
astropy = "^5.2.1"
dask = "^2023.3.1"
matplotlib = "^3.7.1"
requests = "^2.28.2"
tools21cm = "^2.0.1"
pandas = "1.4.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
pylint = "^2.17.1"
pydocstyle = "^6.3.0"
pycln = "^2.1.3"
isort = "^5.12.0"
pyupgrade = "^3.3.1"
pre-commit = "^3.2.0"
pytest = "^7.2.2"
ipykernel = "^6.22.0"
katdal = "^0.20.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
