[tool.poetry]
name = "karabo-pipeline"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "karabo"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
numpy = "1.22"
astropy = "^5.2.2"
dask = "2022.12.1"
matplotlib = "^3.7.1"
healpy = "^1.16.2"
requests = "^2.28.2"
katbeam = "0.1.0"
tools21cm = "2.0.1"
ipython = "^8.12.0"
pandas = "1.4.4"
h5py = "^3.8.0"
seaborn = "^0.12.2"
tensorflow = "^2.12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pylint = "^2.17.2"
pydocstyle = "^6.3.0"
pycln = "^2.1.3"
isort = "^5.12.0"
pyupgrade = "^3.3.1"
pytest = "^7.2.2"
ipykernel = "^6.22.0"
katdal = "^0.20.1"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
